# blitzserver

./: .build.yml  .env.example  .gitignore  Cargo.toml  README.md  \  composer.json  table.sql
.build/: .build.yml  deploy.sh  deploy.yml  tag.sh
config/: bootstrap.php  routes.php
content/: map-list.css  mod-list.css  styles.css
domfiles/: mod.rs
migrations/2020-12-11-055047_create_games/: up.sql
migrations/2020-12-11-112145_create_files/: up.sql
migrations/2020-12-11-123432_create_maps/: down.sql  up.sql
migrations/2020-12-12-080837_game_add_port/: down.sql  up.sql
migrations/2020-12-13-102218_add_players/: up.sql
migrations/2020-12-13-160039_add_nation/: down.sql  up.sql
migrations/2020-12-14-033714_add_player_file/: down.sql  up.sql
migrations/2020-12-14-120503_add_turn/: down.sql  up.sql
migrations/2020-12-14-223733_add_player_turn/: down.sql  up.sql
migrations/2020-12-15-023854_add_mods/: down.sql  up.sql
migrations/2020-12-15-073548_add_game_mods/: up.sql
migrations/2020-12-21-073001_game_add_timer/: down.sql  up.sql
migrations/2020-12-21-141708_game_add_thrones/: down.sql  up.sql
migrations/2020-12-22-050436_game_add_settings/: down.sql  up.sql
migrations/2020-12-24-033106_game_add_internal_port/: down.sql  up.sql
migrations/2020-12-25-051016_turn_add_time/: down.sql  up.sql
migrations/2020-12-29-030431_add_email_configs/: down.sql  up.sql
migrations/2021-01-11-091235_add_email_subject_body/: down.sql  up.sql
migrations/2021-01-13-043756_add_game_password/: down.sql  up.sql
migrations/2021-01-14-053004_map_winter_nullable/: down.sql  up.sql
migrations/2021-01-15-080138_mod_icon/: down.sql  up.sql
migrations/2021-01-16-081804_winter_remove_fk/: down.sql  up.sql
migrations/2021-01-16-084143_email_game_fk/: down.sql  up.sql
migrations/2021-01-17-040047_map_remove_archive/: down.sql  up.sql
migrations/2021-01-19-013217_game_archived/: down.sql  up.sql
migrations/2021-01-20-022532_map_provcounts/: down.sql  up.sql
migrations/2021-01-20-083815_email_config_reminder/: down.sql  up.sql
migrations/2021-01-22-030611_artrest_default/: down.sql  up.sql
migrations/2021-01-29-015359_turn_archived/: down.sql  up.sql
migrations/2021-02-10-034909_nation_filename/: down.sql  up.sql
migrations/2021-02-27-152635_player_turn_status/: down.sql  up.sql
migrations/2021-03-06-092840_disciples_nation/: down.sql  up.sql
migrations/2021-03-10-064119_player_name/: down.sql  up.sql
migrations/2021-03-12-123923_game_logs/: down.sql  up.sql
src/: discord.rs  dom5_emu.rs  dom5_proc.rs  dom5_proxy.rs  email_manager.rs  game_manager.rs  main.rs  map_file.rs  models.rs  msgbus.rs  schema.rs  twoh.rs  util.rs
templates/: add_game.html  container.html  game_details.html  help.html
test_data/: astralpacket_icai104_wh623  ctis_no_pass.2h  ctis_pass.2h  modfileresp_muse_1  submit_turn.2h  tstgame20_ftherlnd
tests/: blitzserver_helper.js  codecept.conf.js  dom5_helper.js  games_test.js  maps_test.js  package-lock.json  package.json  postgres_helper.js
(+255 files in other folders)
