[package]
name = "blitzserver"
version = "0.1.1"
authors = ["Matt <mattkramara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ="*"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["r2d2", "postgres"] }
serde = {version = "*", features=["derive"]}
dotenv = "*"
askama = "*"
r2d2 = "*"
r2d2_postgres ="*"
actix-multipart ="*"
actix-files ="*"
futures = "*"
regex = "*"
crossbeam-channel = "*"
notify = { version = "5.0.0-pre.4", features = [ "serde" ] }
byteorder = "*"
num_enum = "*"
zip = "*"
serde_qs = { version = "*", features = [ "actix" ] }
image = "*"
